<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
                tools:context=".MainActivity">

    <TableLayout
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/table" android:paddingBottom="10dp" tools:ignore="ExtraText">

        <TableRow
                android:id="@+id/row1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="horizontal" android:foregroundGravity="center">

            <TextView
                    android:id="@+id/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text"
                    android:gravity="center"
            />

            <EditText
                    android:id="@+id/message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:autofillHints="" tools:ignore="LabelFor"/>

        </TableRow>

        <TableRow android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="horizontal"
                  android:foregroundGravity="center">
            <Button
                    android:text="@string/button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/textbutton"/>
            <TextView
                    android:id="@+id/blankspace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:gravity="center"
            />
        </TableRow>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center">

            <TextView android:id="@+id/output_text"
                      android:text=""
                      android:layout_width="match_parent" android:layout_height="50dp"
                      android:gravity="center"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="end|bottom">
            <Button android:layout_width="wrap_content" android:layout_height="50dp" android:layout_margin="10dp"
                    android:text="@string/setting" android:id="@+id/setting_button"/>

        </RelativeLayout>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>