<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setting">
    <TableLayout
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/table" android:paddingBottom="10dp" tools:ignore="ExtraText">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>





    <TableRow
            android:id="@+id/row1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal" android:foregroundGravity="center">

        <TextView
                android:id="@+id/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color_code"
                android:gravity="center"
                />

        <EditText
                android:id="@+id/CodeNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:autofillHints="" tools:ignore="LabelFor"
                android:maxLength="8"/>

    </TableRow>

    <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:foregroundGravity="center">
        <TextView
                android:id="@+id/ButtonEnable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonenable"
                android:gravity="center"
                />

        <Switch
                android:id="@+id/EnableToggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />


    </TableRow>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="end|bottom">
            <Button android:layout_width="wrap_content" android:layout_height="50dp" android:layout_margin="10dp"
                    android:text="@string/back" android:id="@+id/back_button"/>

        </RelativeLayout>
    </TableLayout>

    <include
            layout="@layout/content_setting"
            app:layout_anchor="@+id/table"
            app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>